# Agentic-Web-Navigator

./: .env.example  README.md  demo.py  evaluate.py  main.py  pyproject.toml  requirements.txt
benchmarks/: tasks.json
config/: settings.py
src/: __init__.py
src/agent/: __init__.py  executor.py  graph.py  oracle.py  recovery.py  state.py
src/browser/: __init__.py  controller.py
src/utils/: __init__.py  logger.py  state.py
src/vision/: __init__.py  dom_processor.py  observer.py
tests/: test_dom_processor.py
